--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,7 +15,7 @@
     <meta name="author" content="creativeLabs Łukasz Holeczek">
     <title>manage</title>
 
-    <link rel="stylesheet" href="/src/styles/constans.css">
+    <!-- <link rel="stylesheet" href="/src/styles/constans.css"> -->
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
